# OpenGL_Editor

./: .gitignore  CMakeLists.txt  copy_assets.py
assets/shaders/: grid.frag  grid.vert  lightCube.vert  lightCube410.frag  lightCube410.vert  shader.frag  shader.vert  shader410.frag  shader410.vert  shader460.frag  shader460.vert
assets/shaders/grid/: grid410.frag  grid410.vert  grid460.vert
lib/: stb_image.h
lib/GLAD/: CMakeLists.txt  glad.c
lib/GLAD/glad/: glad.h
lib/GLFW/: cmake_uninstall.cmake.in
lib/GLFW/include/GLFW/: glfw3.h
lib/GLM/: manual.md
modules/feather/: CMakeLists.txt
modules/feather/private/: core.cpp  core.h  particle.cpp  particle.h  precision.h  random.cpp
modules/feather/public/: feather.h  random.h
src/: Filesystem.cpp  Shader.cpp  filesystem.cpp  main.cpp  shader.cpp
src/Include/: Filesystem.h  Shader.h  filesystem.h  shader.h
src/Include/Utility/: Camera.h  FramesPerSecondCounter.h  frames_per_second_counter.h
src/camera/: camera.cpp
src/camera/private/: camera.cpp
src/camera/public/: camera.h
src/filesystem/: filesystem.cpp  filesystem.h
src/filesystem/private/: filesystem.cpp
src/filesystem/public/: filesystem.h
src/shader/: shader.cpp  shader.h
src/shader/private/: shader.cpp
src/shader/public/: shader.h
